# su-uuid

./: Cargo.toml  Makefile  README.rst  setup.py
benchmark/: test_uuid1.py  test_uuid3.py  test_uuid4.py  test_uuid5.py
src/: lib.rs
tests/cpython/: test_uuid.py
