[package]
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
name = "uuid-rpy"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.2.7", features = ["python3"] }
uuid = { version = "0.6.3", features = ["v1", "v3", "v4", "v5"] }
arrayvec = { version = "0.4.7" }
