[package]
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
name = "su-uuid"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", rev = "fe931a594f9facaa5562a55ee1c01cce62036c0c", default-features = false }
uuid = { version = "0.6.5", features = ["v1", "v3", "v4", "v5", "u128"] }
arrayvec = "0.4.7"
lazy_static = "1.0.2"

[profile.release]
lto = true
